force-app/main/default/objects/Service_Desk_Registration__c/fields/At_The_Service_Desk_Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>At_The_Service_Desk_Duration_Minutes__c</fullName>
    <description>This field calculates how long the visitor was at the service desk in minutes.</description>
    <formula>/* Date Time fields are resulting in full days. So multiple by 24 hour and 60 minutes per hour to get the minutes */

(Completed_Date_And_Time__c  - Called_To_Service_Desk_Date_And_Time__c) * 24 * 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Hoeveel minuten was de bezoeker bij de servicebalie.</inlineHelpText>
    <label>At The Service Desk Duration (Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>