force-app/main/default/objects/Service_Desk_Registration__c/fields/Completed_Date_And_Time__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date_And_Time__c</fullName>
    <description>This field is needed to calculate the handling time of the visit. The field will be filled if the status is updated to &#39;Completed&#39;.</description>
    <inlineHelpText>Dit is het moment dat de gebruiker de servicebalie bezoek op afgerond heeft gezet.</inlineHelpText>
    <label>Completed Date And Time</label>
    <type>DateTime</type>
</CustomField>