force-app/main/default/objects/Service_Desk_Registration__c/fields/Registered_Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Registered_Duration_Minutes__c</fullName>
    <description>This field calculates how long the visitor was in the waiting area in minutes.</description>
    <formula>/* Date Time fields are resulting in full days. So multiple by 24 hour and 60 minutes per hour to get the minutes */

(Called_To_Service_Desk_Date_And_Time__c - CreatedDate) * 24 * 60</formula>
    <inlineHelpText>Hoeveel minuten was de bezoeker in de wachtruimte.</inlineHelpText>
    <label>Registered Duration (Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>