force-app/main/default/objects/Service_Desk_Registration__c/fields/Total_Duration_Visit_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Total_Duration_Visit_Minutes__c</fullName>
    <description>This field calculates how long the total visit including waiting time was in minutes.</description>
    <formula>/* Date Time fields are resulting in full days. So multiple by 24 hour and 60 minutes per hour to get the minutes */

(Completed_Date_And_Time__c  - CreatedDate) * 24 * 60</formula>
    <inlineHelpText>Hoeveel minuten zat er tussen het moment dat de bezoeker zich aanmeldde en het moment dat het bezoek werd afgerond?</inlineHelpText>
    <label>Total Duration Visit (Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>